# erou-firmware

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  generate_cmake.py  generate_library_cmake.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old  test_container_routine.py
components/external-libraries/: CMakeLists.txt
components/external-libraries/ESPAsyncWebServer/src/: AsyncWebSocket.cpp  WebAuthentication.cpp  WebRequest.cpp
components/external-libraries/TMCStepper/src/: TMCStepper.h
components/external-libraries/TMCStepper/src/source/: TMC2208Stepper.cpp
components/external-libraries/koko/: dsasasdas.h
main/: CMakeLists.txt  component.mk  config.h  config_constants.h  debug.cpp  debug.h  driver.cpp  driver.h  free_rtos_util.h  hello_world_main.cpp  main.cpp  motion.cpp  motion.h  motionHoming.cpp  ota.cpp  ota.h  pins.h
main/src/: config_constants.h  main.cpp  pins.h
main/src/api/: api.cpp  api.h  apiContainer.cpp  apiScheduler.cpp  requestUtil.h
main/src/api/easymongoose/: easymongoose.cpp  easymongoose.h  easymongooseHandlers.cpp  httpHeaders.h  httpRouteDefinition.h  httpStatusCodes.h  method.h  request.cpp  request.h  response.cpp  response.h  stringUtil.h  wsMessage.h  wsRouteDefinition.h
main/src/binn/: binn_util.h
main/src/container/: container.cpp  container.h  containerManager.cpp  containerManager.h  containerManagerSerialization.cpp  containerSerialization.h
main/src/debug/: debugCommand.h  wsDebugMacros.h  wsdebug.cpp  wsdebug.h
main/src/debug/commands/: commands.h  goToContainer.cpp  setDebugLevel.cpp  setStepperEnable.cpp  uptime.cpp
main/src/dispense/: dispense.cpp  dispense.h  dispenseSerialization.h  dispenserManager.cpp  dispenserManager.h  dispenserManagerSerialization.cpp
main/src/etl/: etl_types.h
main/src/json/: cjson_util.h
main/src/math/: math_util.h
main/src/motion/: motion.cpp  motion.h  motionHoming.cpp
main/src/ota/: ota.cpp  ota.h
main/src/scheduler/: scheduler.cpp  scheduler.h
main/src/storedSettings/: storedSettings.cpp  storedSettings.h
src/: CMakeLists.txt  config.h  debug.cpp  debug.h  debugSetup.h  main.cpp  motion.cpp  motion.h  motionHoming.cpp  ota.cpp  ota.h  pins.h
