idf_component_register(
  SRCS "ESPAsyncWebServer/src/AsyncEventSource.cpp" "ESPAsyncWebServer/src/SPIFFSEditor.cpp" "ESPAsyncWebServer/src/WebRequest.cpp" "ESPAsyncWebServer/src/WebHandlers.cpp" "ESPAsyncWebServer/src/AsyncWebSocket.cpp" "ESPAsyncWebServer/src/WebServer.cpp" "ESPAsyncWebServer/src/WebAuthentication.cpp" "ESPAsyncWebServer/src/WebResponses.cpp" "AccelStepper/src/MultiStepper.cpp" "AccelStepper/src/AccelStepper.cpp" "AsyncTCP/src/AsyncTCP.cpp" "StepperDriver/src/DRV8834.cpp" "StepperDriver/src/BasicStepperDriver.cpp" "StepperDriver/src/MultiDriver.cpp" "StepperDriver/src/DRV8825.cpp" "StepperDriver/src/DRV8880.cpp" "StepperDriver/src/SyncDriver.cpp" "StepperDriver/src/A4988.cpp" "fmt/fmt/posix.cc" "fmt/fmt/printf.cc" "fmt/fmt/format.cc" "fmt/fmt/ostream.cc"
  INCLUDE_DIRS "MoodyQueue/src" "ESPAsyncWebServer/src" "AccelStepper/src" "StepperDriver/src" "fmt" "TMCStepper/src" "AsyncTCP/src"
  REQUIRES arduino
)